--- a/src/style.css
+++ b/src/style.css
@@ -54,26 +54,26 @@ html {
 
 h1 {
   font-family: "Reckless-light";
-  font-size: 56px;
-  line-height: 60px;
+  font-size: 70px;
+  line-height: 78px;
 }
 
 h2 {
   font-family: "Matter-light";
-  font-size: 64px;
-  line-height: 70px;
+  font-size: 48px;
+  line-height: 62px;
 }
 
 h3 {
-  font-family: "Matter-light";
-  font-size: 30px;
-  line-height: 40px;
+  font-family: "Reckless-book";
+  font-size: 38px;
+  line-height: 53px;
 }
 
 h4 {
-  font-family: "Reckless-book";
-  font-size: 30px;
-  line-height: 40px;
+  font-family: "Matter-light";
+  font-size: 33px;
+  line-height: 48 px;
 }
 
 h5 {
@@ -82,9 +82,16 @@ h5 {
   line-height: 26px;
 }
 
+h6 {
+  font-family: "Matter-light";
+  font-size: 24px;
+  line-height: 35px;
+}
+
 p {
-  font-size: 14px;
-  line-height: 21px;
+  font-family: "Matter-regular";
+  font-size: 18px;
+  line-height: 28px;
 }
 
 h1 > a
