added our-faculty page, added mailchimp to footer

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 :root {
   /* Eight branches color variables */
   --color-beige: #F5F1E5;
-  --color-lightgreen: #82AF82;
+  --color-lightgreen: #C3E0AB;
   --color-darkgreen: #316C5F;
   --color-white: #ffffff;
   --color-black: #000000;
