fixed footer issue

--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,8 @@
   --color-black: #000000;
   --color-orange: #D33A21;
   --hover-transition: all ease-in-out 0.15s;
+
+  --footer-height: 550px;
 }
 
 @font-face {
