--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,8 @@ body {
   overflow-y: scroll;
 } */
 
+/* See layout.js for font @media breakpoints */
+
 h1 {
   font-family: "Reckless-light";
   font-size: 70px;
@@ -98,6 +100,7 @@ p {
   font-size: 18px;
   line-height: 28px;
 }
+
 
 /* a {
   font-family: "Matter-regular";
