--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
   --color-darkgreen: #316C5F;
   --color-white: #ffffff;
   --color-black: #000000;
+  --color-charcoal: #3D3841;
   --color-orange: #D33A21;
   --hover-transition: all ease-in-out 0.15s;
 
@@ -51,6 +52,7 @@
 
 body {
   margin: 0;
+  overscroll-behavior: none;
 }
 /* Heading */
 
@@ -68,14 +70,14 @@ h1 {
 
 h2 {
   font-family: "Matter-light";
-  font-size: 48px;
-  line-height: 62px;
+  font-size: 45px;
+  line-height: 58px;
 }
 
 h3 {
   font-family: "Reckless-book";
   font-size: 38px;
-  line-height: 53px;
+  line-height: 48px;
 }
 
 h4 {
