--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 :root {
   /* Eight branches color variables */
   --color-sandbeige: #EFE9DD;
-  --color-lightestbeige: #FDFAF1;
+  --color-lightestbeige: #FAF8F2;
   --color-beige: #F5F1E5;
   --color-brown: #CDB598;
   --color-salmon: #E0BBA5;
@@ -84,7 +84,7 @@ h3 {
 h4 {
   font-family: "Matter-light";
   font-size: 33px;
-  line-height: 48 px;
+  line-height: 48px;
 }
 
 h5 {
@@ -101,8 +101,8 @@ h6 {
 
 p, ul, li {
   font-family: "Matter-regular";
-  font-size: 22px;
-  line-height: 34px;
+  font-size: 24px;
+  line-height: 35px;
 }
 
 
